sass and theming

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
       src="https://kit.fontawesome.com/fbb270527c.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Goldman&family=Titillium+Web&display=swap"
+      rel="stylesheet"
+    />
     <title>RDO F1</title>
   </head>
   <body>
